# rust-things

./: .gitignore  Cargo.toml  README.md  bench.md  main.rs  threecubes.rs
src/: goldenratio.rs  newton_aprox.rs  opencl.rs  pi.rs  primes.rs  rust-things.rs  threecubes.rs
