[package]
name = "rust-things"
version = "0.0.1"
authors = ["Simon Gardling"]

[[bin]]
name = "rust-things"

[profile.dev]
codegen-units = 1
opt-level = 3
target-cpu = "native"
lto = "thin"

[profile.release]
codegen-units = 1
opt-level = 3
target-cpu = "native"
lto = "fat"

[dependencies]
rayon = "1.5"
indicatif = {version = "0.15.0", features = ["rayon"]}
primal = "0.3.0"
rand = "0.8.3"
ramp = "0.5.9"
num-bigint = {git = "https://github.com/rust-num/num-bigint.git"}

#gpu compute
arrayfire = {git = "https://github.com/arrayfire/arrayfire-rust.git"}
#arrayfire = "3.8.0"