[package]
name = "rust-things"
version = "0.0.1"
authors = ["Simon Gardling"]

[[bin]]
name = "rust-things"

[profile.dev]
codegen-units = 1
opt-level = 3
target-cpu = "native"

[profile.release]
debug = 0
codegen-units = 1
opt-level = 3
target-cpu = "native"
lto = "thin"

[dependencies]
rayon = "1.5.1"
indicatif = {version = "0.16.2", features = ["rayon"]}
primal = "0.3.0"
rand = "0.8.4"
num-bigint = {git = "https://github.com/rust-num/num-bigint.git"}
num-traits = "0.2.14"
rug = "1.15.0"
lazy_static = "1.4.0"